SERVER-101934: Set batch_size to 0 for stream's changestream watch calls (#33797)